--- a/src/pages/blog/2025-07-27-Windows体验优化指北.md
+++ b/src/pages/blog/2025-07-27-Windows体验优化指北.md
@@ -1,12 +1,12 @@
 ---
-layout: '~/layouts/BlogLayout.astro'   # 使用的布局组件
+layout: '../../layouts/BlogLayout.astro'   # 使用的布局组件
 title: "Windows体验优化指北"               # 文章标题
 pubDate: "2025-07-27"                  # 发布日期，影响列表排序
 description: "日常使用中对Windows诸多问题的解决方案"     # SEO 摘要
 tags:
   - Windows
   - 教程
-heroImage: "/public/assets/blog/2025-07-27-Windows体验优化指北/post.png"     # 封面图路径（可选）
+heroImage: "/assets/blog/2025-07-27-Windows体验优化指北/post.png"     # 封面图路径（可选）
 ---
 
 # Windows体验优化指北
