--- a/src/content/blog/2025-07-27-Windows体验优化指北.md
+++ b/src/content/blog/2025-07-27-Windows体验优化指北.md
@@ -1,15 +1,13 @@
 ---
-layout: '../../layouts/BlogLayout.astro'   # 使用的布局组件
-title: "Windows体验优化指北"               # 文章标题
-pubDate: "2025-07-27"                  # 发布日期，影响列表排序
-description: "日常使用中对Windows诸多问题的解决方案"     # SEO 摘要
+title: "Windows体验优化指北"
+description: A comprehensive guide on how to integrate the Waline comment system into your Frosti blog
+pubDate: 2025 07 27
+image: /image/post.jpg
+categories:
+  - 教程
 tags:
   - Windows
-  - 教程
-heroImage: "/assets/blog/2025-07-27-Windows体验优化指北/post.png"     # 封面图路径（可选）
 ---
-
-# Windows体验优化指北
 
 ## 功能增强
 
