--- a/src/content/blog/2025-07-27-Windows体验优化指北.md
+++ b/src/content/blog/2025-07-27-Windows体验优化指北.md
@@ -2,7 +2,7 @@
 title: "Windows体验优化指北"
 description: A comprehensive guide on how to integrate the Waline comment system into your Frosti blog
 pubDate: 2025 07 27
-image: /image/post.jpg
+image: /src/content/blog/image/post_01.jpg
 categories:
   - 教程
 tags:
